# OlivaDiceLogger

./: pyproject.toml
OlivaDiceLogger/: __init__.py  app.json  data.py  logger.py  main.py  msgCustom.py  msgCustomManager.py  msgReply.py  userConfig.py
